--- a/template/discuzinth/forum/discuz.htm
+++ b/template/discuzinth/forum/discuz.htm
@@ -16,7 +16,7 @@
 	</div>
 	<!--{/if}-->
 	<div class="z">
-		<a href="./" class="nvhm" title="{lang homepage}">$_G[setting][bbname]</a><em>&raquo;</em><a href="forum.php">{$_G[setting][navs][2][navname]}</a>{$navigation or ''}
+		<a href="./" class="nvhm" title="{lang homepage}">$_G[setting][bbname]</a><em>&raquo;</em><a href="forum.php">{$_G[setting][navs][2][navname]}</a>$navigation
 	</div>
 	<div class="z"><!--{hook/index_status_extra}--></div>
 </div>
@@ -454,7 +454,7 @@
 						</div>
 						<!--{/if}-->
 						<!--{/loop}-->
-						{$cat['endrows'] or ''}
+						$cat['endrows']
 					</div>
 				</div>
 				
@@ -564,7 +564,7 @@
 						<!--{if $whosonline}-->
 							<!--{loop $whosonline $key $online}-->
 								<li title="{lang time}: $online[lastactivity]">
-								<img src="$online['icon']" alt="icon" />
+								<img src="{STATICURL}image/common/$online[icon]" alt="icon" />
 								<!--{if $online['uid']}-->
 									<a href="home.php?mod=space&uid=$online[uid]">$online[username]</a>
 								<!--{else}-->
